public abstract class Products
{
    private String name;
    private String password;
    private String description;
    private double price;
    private int pID;


}
