import java.util.ArrayList;

public interface User
{
    String userName = null;
    String password = null;
    int id = 0;

    ArrayList<Item> addedItems = null; // read arraylist during log off and add to DB for user... (idea)



}
